; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_fs-mgr.c_verify_fs_object_json.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_fs-mgr.c_verify_fs_object_json.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [36 x i8] c"Failed to decompress fs object %s.\0A\00", align 1
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*, i32)* @verify_fs_object_json to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @verify_fs_object_json(i8* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca [20 x i8], align 16
  %11 = alloca [41 x i8], align 16
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = load i32, i32* %7, align 4
  %14 = call i64 @seaf_decompress(i32* %12, i32 %13, i32** %8, i32* %9)
  %15 = icmp slt i64 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %3
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 @seaf_warning(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i8* %17)
  %19 = load i32, i32* @FALSE, align 4
  store i32 %19, i32* %4, align 4
  br label %36

20:                                               ; preds = %3
  %21 = getelementptr inbounds [20 x i8], [20 x i8]* %10, i64 0, i64 0
  %22 = load i32*, i32** %8, align 8
  %23 = bitcast i32* %22 to i8*
  %24 = load i32, i32* %9, align 4
  %25 = call i32 @calculate_sha1(i8* %21, i8* %23, i32 %24)
  %26 = getelementptr inbounds [20 x i8], [20 x i8]* %10, i64 0, i64 0
  %27 = getelementptr inbounds [41 x i8], [41 x i8]* %11, i64 0, i64 0
  %28 = call i32 @rawdata_to_hex(i8* %26, i8* %27, i32 20)
  %29 = load i32*, i32** %8, align 8
  %30 = call i32 @g_free(i32* %29)
  %31 = getelementptr inbounds [41 x i8], [41 x i8]* %11, i64 0, i64 0
  %32 = load i8*, i8** %5, align 8
  %33 = call i64 @strcmp(i8* %31, i8* %32)
  %34 = icmp eq i64 %33, 0
  %35 = zext i1 %34 to i32
  store i32 %35, i32* %4, align 4
  br label %36

36:                                               ; preds = %20, %16
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local i64 @seaf_decompress(i32*, i32, i32**, i32*) #1

declare dso_local i32 @seaf_warning(i8*, i8*) #1

declare dso_local i32 @calculate_sha1(i8*, i8*, i32) #1

declare dso_local i32 @rawdata_to_hex(i8*, i8*, i32) #1

declare dso_local i32 @g_free(i32*) #1

declare dso_local i64 @strcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
